--- a/config/database.yml
+++ b/config/database.yml
@@ -1,26 +1,19 @@
-development:
-  adapter: postgresql
-  encoding: utf8
-  database: project_development
-  pool: 5
-  username:
-  password:
+default: &default
+      adapter: postgresql
+      encoding: unicode
+      pool: 5
+      username: <%= ENV['USERNAME'] %>
+      password: <%= ENV['PASSWORD'] %>
+      host:     <%= ENV['IP'] %>
 
-test: &TEST
-  adapter: postgresql
-  encoding: utf8
-  database: project_test
-  pool: 5
-  username:
-  password:
+development:
+  <<: *default
+  database: app_development
+
+test:
+  <<: *default
+  database: app_test
 
 production:
-  adapter: postgresql
-  encoding: utf8
-  database: project_production
-  pool: 5
-  username:
-  password:
-
-cucumber:
-  <<: *TEST
+  <<: *default
+  database: app_production
